name:                tai64
version:             0.1.0.0
synopsis:            Tai64 Labels for Haskell
homepage:            https://github.com/kim/tai64
license:             MIT
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
copyright:           (c) 2015 Kim Altintop
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Data.Time.Clock.TAI.TAI64

  build-depends:
      attoparsec
    , base           >=4.8 && < 5
    , binary
    , bytestring
    , text
    , time
    , vector

  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -O
