name:                tai64
version:             0.1.0.0
synopsis:            Tai64 Labels for Haskell
homepage:            https://github.com/kim/tai64
license:             MIT
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
copyright:           (c) 2015 Kim Altintop
category:            Data
build-type:          Simple
cabal-version:       >=1.10

data-files: *.dat

library
  exposed-modules:
      Data.Time.Clock.TAI64

  build-depends:
      attoparsec
    , base           >=4.8 && < 5
    , binary
    , bytestring
    , QuickCheck
    , text
    , time
    , vector
    , base16-bytestring

  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -O

test-suite doctests
  type:              exitcode-stdio-1.0
  main-is:           Doctests.hs

  build-depends:
      base
    , doctest        >= 0.8
    , tai64

  hs-source-dirs:    test
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded
